Fixed column width and title line height on mobile devices

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -76,13 +76,13 @@ a {
 
 @media (min-width: 1000px) {
     #container {
-        grid-template-columns: 1fr 600px 1fr;
+        grid-template-columns: 1fr 580px 1fr;
     }
 }
 
 @media (min-width: 1200px) {
     #container {
-        grid-template-columns: 1fr 800px 1fr;
+        grid-template-columns: 1fr 780px 1fr;
     }
 }
 
@@ -289,10 +289,6 @@ ul, ol {
     margin-bottom: 0.5rem;
 }
 
-h1 {
-    line-height: 1.3;
-}
-
 @media (min-width: 800px) {
     #metadata {
         flex-direction: row;
@@ -300,10 +296,6 @@ h1 {
     
     #date {
         margin-bottom: 0;
-    }
-    
-    h1 {
-        line-height: inherit;
     }
 }
 
